1.2 Fix validate button when choosing layers on smaller screen. Remove bottom button.

--- a/frontend/app/assets/stylesheets/geocms/frontend/base/layouts.css.scss
+++ b/frontend/app/assets/stylesheets/geocms/frontend/base/layouts.css.scss
@@ -42,3 +42,15 @@ body.login {
   top: 153px;
   margin-left: 10px;
 }
+
+@media all and (max-width: 1450px) {
+  .positioner {
+    position: relative;
+  }
+
+  .fixed {
+    position: inherit;
+    top: 0;
+    margin-left: 0;
+  }
+}
