--- a/frontend/app/assets/stylesheets/geocms/frontend/components/buttons.css.scss
+++ b/frontend/app/assets/stylesheets/geocms/frontend/components/buttons.css.scss
@@ -101,6 +101,10 @@
 .btn-fixed_right {
   width: 100px;
 }
-
+@media all and (max-width: 1450px) {
+  .btn-fixed_right {
+    width: 97%;
+  }
+}
 
 
