--- a/frontend/app/assets/stylesheets/geocms/frontend/modules/catalog.scss
+++ b/frontend/app/assets/stylesheets/geocms/frontend/modules/catalog.scss
@@ -23,16 +23,23 @@
     right: 0;
     .btn-close {
       position: fixed;
-      padding: 2px 8px 4px 8px;
+      padding: 0px 8px 0px 8px;
       &.close {
         background-color: $catalog-close-button-background-color;
         color: $catalog-close-button-color;
-        border: 1px solid $catalog-close-button-border-color;
         text-shadow: none;
         @include opacity(100);
       }
     }
   }
+  @media all and (max-width: 1450px) {
+    .catalog-close-button-container {
+      top: 0;
+      position: relative;
+      margin-top: -10px;
+    } 
+  }
+
   .page-header {
     margin-bottom: 15px;
   }
